public/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        backend:
          serviceName: prom-grafana
          servicePort: 3000
      - path: /prom
        backend:
          serviceName: prom-prometheus-operator-prometheus
          servicePort: 9090
      - path: /alertmanager
        backend:
          serviceName: prom-prometheus-operator-alertmanager
          servicePort: 9093
